Parser: Refactor Parser class for more SLAP
Applied SLAP more aggressively